--- a/frontend/pjt-frontend/src/css/InputField.css
+++ b/frontend/pjt-frontend/src/css/InputField.css
@@ -24,7 +24,7 @@
   
   input{
     border:none;
-    width: 100%;
+    width: 90%;
     height: 90%;
     border-radius: 20px;
     padding-left: 5px;
@@ -36,13 +36,15 @@
   .send-button{
     min-width: 70px;
     border-radius: 20px;
-    background-color:#F7E600; 
+    background-color:#a16dbb;
+    font-size: 16px;
+    color: white;
     border:none;
   }
   .send-button:hover {
     cursor:pointer;
   }
   .send-button:active {
-    background-color: yellow;
+    background-color: rgb(170, 110, 181);
   }
   
